--- a/assets/css/slice.css
+++ b/assets/css/slice.css
@@ -2,12 +2,33 @@
     display: flex;
 }
 
-.item img {
-    width: 33%;
+.item a {
+    width: 33.33%;
+}
+
+.item a img {
+    width: 100%;
     height: 250px;
     object-fit: cover;
 }
 
 .contact-inner-ico {
     z-index: 1;
+}
+
+a.link-footer {
+    height: 60px;
+    margin-bottom: 0;
+}
+
+.link-footer img {
+    height: auto;
+    width: 100%;
+}
+
+.footer-contact {
+    margin-top: 16px;
+    width: 100%!important;
+    display: flex;
+    justify-content: space-between;
 }
